Fix collision overlapping bug by mapping physical radii to visual sizes and removing artificial visual scale

--- a/src/board-selection/board-selection.css
+++ b/src/board-selection/board-selection.css
@@ -19,7 +19,7 @@
     max-width: 100%;
     max-height: 100%;
     container-type: inline-size;
-    background-image: url('../Assets/menu/BG_.png');
+    background-image: url('../../Assets/menu/BG_.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -69,7 +69,7 @@
     padding-left: 2%;
     padding-right: 2.5%;
     box-sizing: border-box;
-    background-image: url('../Assets/menu/Upper-Bar.png');
+    background-image: url('../../Assets/menu/Upper-Bar.png');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -109,7 +109,7 @@
 .board-coins-container {
     height: 60%;
     aspect-ratio: 204 / 75;
-    background-image: url('../Assets/Board-slection/Coins\ Bar_.png');
+    background-image: url('../../Assets/Board-slection/Coins\ Bar_.png');
     background-size: 100% 100%;
     position: relative;
     display: flex;
