--- a/src/result/result.css
+++ b/src/result/result.css
@@ -10,7 +10,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    background-image: url('../Assets/menu/BG_.png');
+    background-image: url('../../Assets/menu/BG_.png');
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -95,7 +95,7 @@
     width: 17cqw;
     height: 17cqw;
     border-radius: 50%;
-    background-image: url('../Assets/menu/User-Name.png');
+    background-image: url('../../Assets/menu/User-Name.png');
     background-size: auto 100%;
     background-position: left center;
     background-repeat: no-repeat;
